deploy/kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kcd-demo-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: __TEMPLATE_PROJECTNAME__.platform.kcd.whizus.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kcd-demo-app
            port:
              number: 80
  tls:
  - hosts:
    - __TEMPLATE_PROJECTNAME__.platform.kcd.whizus.net
    secretName: kcd-demo-app-tls
